// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MessageBox component should render a System message 1`] = `
<styled.div
  className=""
  onClick={null}
  onKeyPress={null}
>
  <SystemMessage
    className=""
    message={
      Object {
        "person": Object {
          "avatar": "https://pbs.twimg.com/profile_images/718588760003383296/2AG8omMO_400x400.jpg",
          "email": "",
          "type": "Client",
        },
        "status": "read",
        "type": "System",
      }
    }
    onMessageClick={null}
    person={null}
    position="left"
    text=""
    type="text"
  />
</styled.div>
`;

exports[`MessageBox component should render a Time message 1`] = `
<styled.div
  className=""
  onClick={null}
  onKeyPress={null}
>
  <styled.div>
    <Avatar
      alt=""
      className="LT-Avatar-Container"
      color={null}
      size="xsmall"
      sizes={null}
      src="https://pbs.twimg.com/profile_images/718588760003383296/2AG8omMO_400x400.jpg"
      srcSet={null}
      status=""
      type="circle"
      withStatus={false}
    />
  </styled.div>
  <TimeMarkMessage
    className=""
    message={
      Object {
        "person": Object {
          "avatar": "https://pbs.twimg.com/profile_images/718588760003383296/2AG8omMO_400x400.jpg",
          "email": "",
          "type": "Client",
        },
        "status": "read",
        "type": "Time",
      }
    }
    onMessageClick={null}
    person={null}
    position="left"
    text=""
    type="text"
  />
</styled.div>
`;
